Public API Narrowing (#1)
Authored-by: Ethan McCue <ethan@mccue.dev>