@@ -4,7 +4,6 @@ import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotEquals;
 import static org.junit.Assert.assertNotNull;
 
-import com.google.common.collect.ImmutableList;
 import com.rjesquivias.todoist.dao.ILabelDao.CreateArgs;
 import com.rjesquivias.todoist.dao.ILabelDao.UpdateArgs;
 import com.rjesquivias.todoist.domain.Label;
@@ -19,7 +18,7 @@ public class LabelDaoIntegrationTest {
   private static final ILabelDao labelDao = new LabelDao(
       new HttpRequestHelper(HttpClient.newBuilder().build()),
       Dotenv.load());
-  private static final Collection<String> labelNames = ImmutableList.of("INT_TEST_LABEL_1",
+  private static final Collection<String> labelNames = List.of("INT_TEST_LABEL_1",
       "INT_TEST_LABEL_2", "INT_TEST_LABEL_3", "INT_TEST_LABEL_4");
   private static final String labelNameOne = "INT_TEST_LABEL_1";
   private static final String labelNameTwo = "INT_TEST_LABEL_2";
